변경 사항: MeridiemTextFormatTest 구조 수정